2007-10-30  Bastien Nocera  <hadess@hadess.net>

	* README: Add web page address, thanks Kjartan

============ Version 0.30

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	Fix sending texts that don't fit in the default GSM alphabet,
	gnokii expects UTF-8, and will convert to UCS-2 itself

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	Zero-out the SMS data after having sent the message

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_connect), (phonemgr_listener_queue_message):
	When receiving texts, they will be in GSM alphabet if it fits
	in the alphabet (fixes receiving SMS from ISO8859-1 texts),
	Don't send texts as UCS-2 when they fit in the default GSM alphabet
	by not forgetting to convert to ISO8859-1 first
	(Closes: #490471)

	Sending as UCS-2 doesn't work though

2007-10-26  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_init), (phonemgr_listener_connect),
	(phonemgr_listener_battery_poll): Call GN_OP_GetBatteryLevel first,
	as it's what most drivers implement, also warn when the driver
	doesn't support

2007-10-26  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (main):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_get_property),
	(phonemgr_listener_set_property), (phonemgr_listener_class_init),
	(phonemgr_listener_emit_message), (phonemgr_listener_new),
	(phonemgr_listener_connect), (phonemgr_listener_battery_poll):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-utils.c: (phonemgr_utils_connect),
	(phonemgr_utils_tell_driver), (phonemgr_utils_write_gnokii_config):
	* libgsm/phonemgr-utils.h: